fix spacing

--- a/src/scss/03-generic/_application.scss
+++ b/src/scss/03-generic/_application.scss
@@ -10,4 +10,8 @@
     font-weight: 700;
     color: $blue-purple;
   }
+
+  .work-view-header {
+    margin-bottom: 2em;
+  }
 }
