--- a/src/scss/04-elements/__elements.scss
+++ b/src/scss/04-elements/__elements.scss
@@ -8,7 +8,7 @@
   .table-wrapper {
     border: 2px solid $grey;
     border-radius: 4px;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
   }
 
   table {
